feat: Extreme Premium UI overhaul and Sonar Launch sound effect

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "cra-template-default": "0.0.5",
     "react": "^19.2.4",
