--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,17 @@ requests==2.32.3
 beautifulsoup4==4.12.3
 flask-sqlalchemy==3.1.1
 mysql-connector-python==9.1.0
+
+# V2: Browser automation
+playwright==1.40.0
+
+# V2: Domain and DNS utilities
+tldextract==5.1.1
+dnspython==2.4.2
+python-whois==0.9.5
+
+# V2: Google Safe Browsing API
+google-api-python-client==2.108.0
+
+# V2: Async support for Playwright
+asgiref==3.7.2
